<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/submit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/margin_xl_vertical"
        android:paddingTop="@dimen/margin_medium_vertical"
        android:paddingBottom="@dimen/margin_medium_vertical"
        android:text="@string/submit"
        android:textAppearance="@style/ButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/min_fare_minus_button"
                style="@style/CompoundButtonLeft"
                android:layout_width="@dimen/increment_button_width"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                app:layout_constraintBottom_toBottomOf="@id/min_fare_plus_button"
                app:layout_constraintEnd_toStartOf="@id/min_fare_plus_button"
                app:layout_constraintTop_toTopOf="@id/min_fare_plus_button" />

            <Button
                android:id="@+id/min_fare_plus_button"
                style="@style/CompoundButtonRight"
                android:layout_width="@dimen/increment_button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_vertical"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/margin_medium_vertical"
                android:text="@string/plus"
                app:layout_constraintBottom_toTopOf="@id/min_base_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header_divider" />

            <Button
                android:id="@+id/base_fare_minus_button"
                style="@style/CompoundButtonLeft"
                android:layout_width="@dimen/increment_button_width"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                app:layout_constraintBottom_toBottomOf="@id/base_fare_plus_button"
                app:layout_constraintEnd_toStartOf="@id/base_fare_plus_button"
                app:layout_constraintTop_toTopOf="@id/base_fare_plus_button" />

            <Button
                android:id="@+id/base_fare_plus_button"
                style="@style/CompoundButtonRight"
                android:layout_width="@dimen/increment_button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_vertical"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/margin_medium_vertical"
                android:text="@string/plus"
                app:layout_constraintBottom_toTopOf="@id/base_minute_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/min_base_divider" />

            <Button
                android:id="@+id/minute_fare_minus_button"
                style="@style/CompoundButtonLeft"
                android:layout_width="@dimen/increment_button_width"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                app:layout_constraintBottom_toBottomOf="@id/minute_fare_plus_button"
                app:layout_constraintEnd_toStartOf="@id/minute_fare_plus_button"
                app:layout_constraintTop_toTopOf="@id/minute_fare_plus_button" />

            <Button
                android:id="@+id/minute_fare_plus_button"
                style="@style/CompoundButtonRight"
                android:layout_width="@dimen/increment_button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_vertical"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/margin_medium_vertical"
                android:text="@string/plus"
                app:layout_constraintBottom_toTopOf="@id/minute_mile_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/base_minute_divider" />

            <Button
                android:id="@+id/mile_fare_minus_button"
                style="@style/CompoundButtonLeft"
                android:layout_width="@dimen/increment_button_width"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                app:layout_constraintBottom_toBottomOf="@id/mile_fare_plus_button"
                app:layout_constraintEnd_toStartOf="@id/mile_fare_plus_button"
                app:layout_constraintTop_toTopOf="@id/mile_fare_plus_button" />

            <Button
                android:id="@+id/mile_fare_plus_button"
                style="@style/CompoundButtonRight"
                android:layout_width="@dimen/increment_button_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_vertical"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/margin_medium_vertical"
                android:text="@string/plus"
                app:layout_constraintBottom_toTopOf="@id/mile_bottom_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/minute_mile_divider" />

            <TextView
                android:id="@+id/card_label"
                style="@style/TitleHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_xl_vertical"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/standard_card"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <TextView
                android:id="@+id/suggested_label"
                style="@style/SubHeader.Grey.Caps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_large_vertical"
                android:text="@string/suggested"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_label" />

            <TextView
                android:id="@+id/user_set_label"
                style="@style/SubHeader.Blue.Caps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large_horizontal"
                android:layout_marginTop="@dimen/margin_large_vertical"
                android:text="@string/user_set"
                app:layout_constraintStart_toEndOf="@id/suggested_label"
                app:layout_constraintTop_toBottomOf="@id/card_label" />

            <TextView
                android:id="@+id/min_fare_label"
                style="@style/Body.Grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/minimum_fare"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/min_fare_plus_button" />

            <TextView
                android:id="@+id/min_fare_suggested"
                style="@style/Body.Grey.Semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="$7.75"
                app:layout_constraintBottom_toBottomOf="@+id/min_fare_plus_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/min_fare_label" />

            <TextView
                android:id="@+id/min_fare_user_set"
                style="@style/SubHeader.Blue.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$8.75"
                app:layout_constraintBottom_toBottomOf="@id/min_fare_plus_button"
                app:layout_constraintStart_toStartOf="@id/user_set_label"
                app:layout_constraintTop_toTopOf="@id/min_fare_plus_button" />

            <TextView
                android:id="@+id/base_fare_label"
                style="@style/Body.Grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/base_fare"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/base_fare_plus_button" />

            <TextView
                android:id="@+id/base_fare_suggested"
                style="@style/Body.Grey.Semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="$1.35"
                app:layout_constraintBottom_toBottomOf="@id/base_fare_plus_button"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/base_fare_user_set"
                style="@style/SubHeader.Blue.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$1.40"
                app:layout_constraintBottom_toBottomOf="@id/base_fare_plus_button"
                app:layout_constraintStart_toStartOf="@id/user_set_label"
                app:layout_constraintTop_toTopOf="@id/base_fare_plus_button" />

            <TextView
                android:id="@+id/minute_fare_label"
                style="@style/Body.Grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/per_minute"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/minute_fare_plus_button" />

            <TextView
                android:id="@+id/minute_fare_suggested"
                style="@style/Body.Grey.Semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="$1.25"
                app:layout_constraintBottom_toBottomOf="@id/minute_fare_plus_button"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/minute_fare_user_set"
                style="@style/SubHeader.Blue.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$1.25"
                app:layout_constraintBottom_toBottomOf="@id/minute_fare_plus_button"
                app:layout_constraintStart_toStartOf="@id/user_set_label"
                app:layout_constraintTop_toTopOf="@id/minute_fare_plus_button" />

            <TextView
                android:id="@+id/mile_fare_label"
                style="@style/Body.Grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/per_mile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/mile_fare_plus_button" />

            <TextView
                android:id="@+id/mile_fare_suggested"
                style="@style/Body.Grey.Semibold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="$0.35"
                app:layout_constraintBottom_toBottomOf="@id/mile_fare_plus_button"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/mile_fare_user_set"
                style="@style/SubHeader.Blue.SemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$0.35"
                app:layout_constraintBottom_toBottomOf="@id/mile_fare_plus_button"
                app:layout_constraintStart_toStartOf="@id/user_set_label"
                app:layout_constraintTop_toTopOf="@id/mile_fare_plus_button" />

            <View
                android:id="@+id/header_divider"
                android:layout_width="0dp"
                android:layout_height="@dimen/divider_thickness"
                android:layout_marginTop="@dimen/margin_xs_vertical"
                android:background="@color/platinum"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/suggested_label" />

            <View
                android:id="@+id/min_base_divider"
                android:layout_width="0dp"
                android:layout_height="@dimen/divider_thickness"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_medium_vertical"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:background="@color/platinum"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/min_fare_plus_button" />

            <View
                android:id="@+id/base_minute_divider"
                android:layout_width="0dp"
                android:layout_height="@dimen/divider_thickness"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_medium_vertical"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:background="@color/platinum"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/base_fare_plus_button" />

            <View
                android:id="@+id/minute_mile_divider"
                android:layout_width="0dp"
                android:layout_height="@dimen/divider_thickness"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_medium_vertical"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:background="@color/platinum"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/minute_fare_plus_button" />

            <View
                android:id="@+id/mile_bottom_divider"
                android:layout_width="0dp"
                android:layout_height="@dimen/divider_thickness"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_medium_vertical"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:background="@color/platinum"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mile_fare_plus_button" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/suggested_rate_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_small_vertical"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:checked="true"
                android:text="@string/use_suggested_rate"
                android:textAppearance="@style/BodyLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mile_bottom_divider" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>